--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.grant</groupId>
     <artifactId>ToolBox</artifactId>
-    <version>0.3c-SNAPSHOT</version>
+    <version>0.4-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>ToolBox</name>
     <!-- Не работающий репозиторий -->
