--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,6 @@
     <version>0.5b-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>ToolBox</name>
-    <!-- Не работающий репозиторий -->
-    <repositories>
-        <repository>
-            <id>JetBrains</id>
-            <url>https://dl.bintray.com/jetbrains/intellij-third-party-dependencies/</url>
-        </repository>
-    </repositories>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -26,12 +19,28 @@
     </properties>
     <!-- Зависимости -->
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.7.1</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+        <!--
         <dependency>
             <groupId>com.jetbrains.intellij.java</groupId>
             <artifactId>java-gui-forms-compiler</artifactId>
             <version>211.4944</version>
             <scope>runtime</scope>
         </dependency>
+        -->
     </dependencies>
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
